Code cleanup, line work, logger work, fix cloning